# MODULAR-RAG-MCP-SERVER

./: .mcp.json  Agent_SPEC.md  README.md  current_requirements.txt  interview_report_20260313_1513.md  interview_report_20260313_2041.md  main.py  pyproject.toml  test_my_documents.py
.claude/: mcp_servers_config.json
.cline/: MCP_SETUP.md  mcp_server_wrapper.py  mcp_settings.json
config/: settings.yaml
docs/: ADVANCED_DOCUMENT_LOADER_GUIDE.md  EVALUATION_MODULES_COMPLETE.md  EVALUATION_MODULES_GUIDE.md  QUICK_START_GUIDE.md
scripts/: demo_evaluation.py
smart-agent-hub/: .gitignore  Agent_SPEC.md  README.md  cli.py  main.py  pyproject.toml
smart-agent-hub/agent/: __init__.py
smart-agent-hub/agent/core/: __init__.py  agent.py  executor.py  memory.py  models.py  planner.py  settings.py  state_manager.py
smart-agent-hub/agent/llm/: __init__.py  client.py  prompts.py
smart-agent-hub/agent/mcp/: __init__.py  client.py  tool_registry.py
smart-agent-hub/agent/storage/: __init__.py  jsonl_logger.py
smart-agent-hub/config/: settings.yaml
smart-agent-hub/dashboard/: app.py
smart-agent-hub/docs/: AGENT_USAGE_GUIDE.md  DASHBOARD_USAGE_GUIDE.md  MEMORY_AND_DASHBOARD_COMPLETE.md
smart-agent-hub/tests/: __init__.py  conftest.py
smart-agent-hub/tests/unit/: __init__.py  test_executor.py  test_mcp_client.py  test_memory.py  test_react_planner.py  test_settings.py  test_state_manager.py
src/core/: types.py
src/mcp_server/: protocol_handler.py  server.py
src/observability/: logger.py
tests/: conftest.py
tests/fixtures/: generate_golden_test_set.py  (+2 more)
(+64 files in other folders)
